# josh_Ox_ribbon_synth

./: .gitignore  LICENSE-SOFTWARE  README.md
adsr_and_pwm_lfo_board/: vc_adsr-cache.lib  vc_adsr.pro  vc_adsr.sch
calibration/: README.md
circuit_boards/: README.md  boards.txt  current_draw.md
circuit_boards/.kibot/: Makefile  cleanup.sh
circuit_boards/ADSR_board/: README.md  index.html
circuit_boards/VCF_VCA_BBD_board/: README.md  index.html
circuit_boards/VCF_VCA_board/: README.md  index.html
circuit_boards/main_VCO_board/: README.md  index.html
circuit_boards/mains_transformer/: README.md
circuit_boards/mod_osc_board/: README.md  index.html
circuit_boards/pcb_sandbox/: README.md  pcb_sandbox.kicad_pro
circuit_boards/power_supply_board/: README.md  index.html
circuit_boards/ribbon_board/: README.md  index.html
circuit_boards/sample_and_hold_board/: README.md  index.html
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: board.rs  glide_processor.rs  main.rs  midi_transmitter.rs  ui.rs
mixer_vcf_vca_board/: mixer-vcf-vca board.bak  mixer-vcf-vca board.pro  mixer-vcf-vca board.sch
modulation_ring_mod_board/: modulation-ring_mod_board-cache.lib  modulation-ring_mod_board.bak  modulation-ring_mod_board.pro  modulation-ring_mod_board.sch
panel/: Makefile  README.md
panel/.kibot/: README.md  doc_gen.kibot.yaml
panel/ADSR_pcb_panel/: README.md  index.html
sub_osc_board/: sub_osc_board-cache.lib  sub_osc_board.bak  sub_osc_board.pro  sub_osc_board.sch
summer_2022_refurb/: Makefile  README.md
(+893 files in other folders)
