[package]
authors = ["Jordan Aceto <jordanaceto@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "josh-ox-ribbon-synth"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32l4xx-hal = { version = "0.7", features = ["stm32l412"] }
heapless = "0.7"
nb = "1"
biquad = "0.4"
synth-utils = { git = "https://github.com/JordanAceto/synth-utils-rs" }


# this lets you use `cargo fix`!
[[bin]]
name = "josh-ox-ribbon-synth"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"
debug = true
